--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Portfolio theme
+Theme Name: Pizzeria Campino 2k18
 Author: Axel & Linus
-Description: A theme to present creative work
+Description: Thema för en Pizzeria
 */
