--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@ Theme Name: Pizzeria Campino 2k18
 Author: Axel & Linus
 Description: Thema för en Pizzeria
 */
+
+
+*{
+    padding:0px;
+    margin:0px;
+}
+html, body{
+    width:100%;
+    height:100%;
+}
