--- a/style.css
+++ b/style.css
@@ -9,7 +9,23 @@ Description: Thema för en Pizzeria
     padding:0px;
     margin:0px;
 }
+html{
+  margin: 0;
+}
 html, body{
     width:100%;
     height:100%;
+    margin: 0 auto;
+}
+header{
+  background: #fefefe;
+  padding: 22px 33px;
+  display: flex;
+  justify-content: space-around;
+}
+.menu{
+  display: block;
+}
+.menu > ul{
+  list-style: none;
 }
