--- a/style.css
+++ b/style.css
@@ -9,23 +9,39 @@ Description: Thema för en Pizzeria
     padding:0px;
     margin:0px;
 }
-html{
-  margin: 0;
-}
 html, body{
     width:100%;
     height:100%;
-    margin: 0 auto;
+    font-family: 'Roboto', sans-serif;
 }
 header{
   background: #fefefe;
-  padding: 22px 33px;
+  height: 77px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  -webkit-box-shadow: 0px 1px 10px 0px rgba(0,0,0, .5);
+  -moz-box-shadow: 0px 1px 10px 0px rgba(0,0,0, .5);
+  box-shadow: 0px 1px 10px 0px rgba(0,0,0, .5);
+}
+footer{
+  background: #393939;
+  padding: 22px 33px;
 }
 .menu{
-  display: block;
+
 }
 .menu > ul{
   list-style: none;
+  display: block;
+  overflow: hidden;
+}
+.menu > ul > li{
+  display: block;
+  margin-left: 11px;
+  float: left;
+}
+.menu > ul > li > a{
+  color: black;
+  text-decoration: none;
 }
