--- a/style.css
+++ b/style.css
@@ -14,9 +14,13 @@ html, body{
     height:100%;
     font-family: 'Roboto', sans-serif;
 }
+main{
+  overflow: hidden;
+}
 header{
-  background: #fefefe;
-  height: 77px;
+  background: #393939;
+  color: white;
+  height: 66px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -24,12 +28,17 @@ header{
   -moz-box-shadow: 0px 1px 10px 0px rgba(0,0,0, .5);
   box-shadow: 0px 1px 10px 0px rgba(0,0,0, .5);
 }
+header > a{
+  color: white;
+  text-decoration: none;
+}
 footer{
   background: #393939;
+  color: white;
   padding: 22px 33px;
+
 }
 .menu{
-
 }
 .menu > ul{
   list-style: none;
@@ -42,6 +51,18 @@ footer{
   float: left;
 }
 .menu > ul > li > a{
-  color: black;
+  color: white;
   text-decoration: none;
+}
+.widget-container{
+  background: grey;
+  width: 50%;;
+  padding: 11px 22px;
+  float: right;
+  text-align: center;
+  box-sizing: border-box;
+}
+.widget-title{
+  font-weight: bold;
+  font-size: 1.5em;
 }
