--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ Description: Thema för en Pizzeria
 html, body{
     width:100%;
     height:100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 main{
   overflow: hidden;
@@ -63,7 +63,7 @@ footer{
   transition: color .3s ease-in-out;
 }
 .widget-container{
-  background: grey;
+  background: #bfebff;
   width: 100%;;
   padding: 11px;
   float: right;
@@ -77,20 +77,35 @@ footer{
   margin-bottom: 5px;
 }
 .red{
-  background: red;
+  background: #ffc691;
 }
 .meny-container{
   display: flex;
   flex-flow: column wrap;
   justify-content: space-around;
-  max-height: 125vh;
+  max-height: 150vh;
+  counter-reset: li;
 }
+
 .meny-container > li{
   width: 50%;
-  padding-left: 22px;
   box-sizing: border-box;
   display: block;
+  padding-left: 22px;
+  margin-bottom: 6px;
+  position: relative;
 }
+
 .meny-container > li::before{
-  counter-increment: section;
+  counter-increment: li;
+  content: counters(li,".") ". ";
+  position: absolute;
+  top:2px;
+  left:0;
+}
+
+h2::before {
+}
+.sliderImage{
+
 }
