--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html, body{
     width:100%;
     height:100%;
     font-family: 'Lato', sans-serif;
+    background-color: #EFEFEF;
 }
 main{
   overflow: hidden;
@@ -40,6 +41,7 @@ footer{
   padding: 22px 33px;
 
 }
+
 .menu{
 
 }
@@ -62,6 +64,9 @@ footer{
   text-decoration: none;
   transition: color .3s ease-in-out;
 }
+.current_page_item > a{
+  color: orange !important;
+}
 .widget-container{
   background: #bfebff;
   width: 100%;;
@@ -70,6 +75,9 @@ footer{
   text-align: center;
   box-sizing: border-box;
   margin: 11px 0;
+}
+.widget-container-extra{
+  
 }
 .widget-title{
   font-weight: bold;
