--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ footer{
     left:0;
 }
 .information-container{
-
+  box-sizing: border-box;
 }
 .bx-wrapper{
 }
@@ -152,7 +152,7 @@ footer > .widget-container{
   }
     .widget-container {
       width: 47%;
-      margin: 11px;
+      margin: 11px 11px 11px 0;
     }
     footer > .widget-container {
       background: rgba(0, 0, 0, 0);
@@ -162,5 +162,11 @@ footer > .widget-container{
       text-align: center;
       box-sizing: border-box;
       margin: 11px 0;
+    }
+    .full{
+      width: 100%;
+      box-sizing: border-box;
+      padding: 11px;
+      margin: 0;
     }
 }
